tgthrProgramManagement/force-app/main/default/objects/PendingDocOpenRequest__c/PendingDocOpenRequest__c.object-meta.xml
<CustomObject>
    <label>Pending Doc Open Request</label>
    <nameField>
        <displayFormat>PDOR-{00000}</displayFormat>
        <label>Pending Doc Open Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pending Doc Open Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>