tgthrProgramManagement/force-app/main/default/objects/PendingDocOpenRequest__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Pending Doc Open Requests</relationshipLabel>
    <relationshipName>PendingDocOpenRequests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>