tgthrProgramManagement/force-app/main/default/objects/PendingDocOpenRequest__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>Record Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>