tgthrProgramManagement/force-app/main/default/objects/PendingDocOpenRequest__c/fields/TargetUser__c.field-meta.xml
<CustomField>
    <fullName>TargetUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Pending Doc Open Requests</relationshipLabel>
    <relationshipName>PendingDocOpenRequests</relationshipName>
    <type>Lookup</type>
</CustomField>